--- a/scripts/openocd.cfg
+++ b/scripts/openocd.cfg
@@ -1,5 +1,5 @@
 
 source [find interface/stlink-v2.cfg]
 transport select hla_swd
-source [find target/stm32f1x_stlink.cfg]
+source [find target/stm32f1x.cfg]
 program picodrone.elf verify reset exit
