--- a/drone/drone_openocd.cfg
+++ b/drone/drone_openocd.cfg
@@ -1,5 +1,4 @@
-
 source [find interface/stlink-v2.cfg]
 transport select hla_swd
 source [find target/stm32f1x.cfg]
-program picodrone.elf verify reset exit
+program [find drone/drone.elf] verify reset exit
