Completed restructure with tasks in individual projects

--- a/drone/CMakeLists.txt
+++ b/drone/CMakeLists.txt
@@ -7,10 +7,12 @@ set(ELF ${PROJECT_NAME}.elf)
 
 file(GLOB DRONE_SRC "lib/*.cpp")
 
+file(GLOB DRONE_C_SRC "lib/*.c")
+
 enable_language(ASM)
 set(STARTUP_FILE "../system/startup_stm32f103xb.c")
 
-add_executable(${ELF} ${STARTUP_FILE} ${DRONE_SRC} main.cpp)
+add_executable(${ELF} ${STARTUP_FILE} ${DRONE_SRC} ${DRONE_C_SRC} main.cpp)
 
 target_include_directories(${ELF} PUBLIC "include")
 
