Stripped old code for fresh start

--- a/drone/CMakeLists.txt
+++ b/drone/CMakeLists.txt
@@ -5,9 +5,9 @@ project(drone)
 
 set(ELF ${PROJECT_NAME}.elf)
 
-file(GLOB DRONE_SRC "lib/*.cpp")
+file(GLOB DRONE_SRC "src/*.cpp")
 
-file(GLOB DRONE_C_SRC "lib/*.c")
+file(GLOB DRONE_C_SRC "src/*.c")
 
 enable_language(ASM)
 set(STARTUP_FILE "../system/startup_stm32f103xb.c")
