Simple dockerfile with script that allows for basic build process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ project(picodrone)
 add_subdirectory(external)
 add_subdirectory(common)
 add_subdirectory(drone)
-# add_subdirectory(transmitter)
+add_subdirectory(transmitter)
