controller init refactor using C instead of C++ interface. works with v3 board

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -10,6 +10,7 @@ target_link_libraries(common hal freertos )
 
 target_include_directories(common PUBLIC 
     "include/"
+    "include/hal/"
     ${SYSTEM_INCLUDE}
     ${STM32_INCLUDE}
     
